--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="categories">
-        <span class="category" ng-click="setCategory(category)" ng-repeat="category in categories">
+        <span class="category" ng-click="main.setCategory(category)" ng-repeat="category in main.categories">
             {{ category | firstLetterCaps }}
         </span>
     </div>
