--- a/app/views/item.html
+++ b/app/views/item.html
@@ -4,9 +4,13 @@
             {{ category | firstLetterCaps }}
         </span>
     </div>
-<img class="gridImageLarge" src="{{ item.image }}">
-<span>{{ item.title }}</span>
-<br />
-<span>{{ item.description }}</span>
-<br />
-<span>{{ item.content }}</span>
+<div class="itemContainer">
+    <div class="gridImageLargeContainer">
+        <img class="gridImageLarge" src="{{ item.image }}">
+    </div>
+    <span class="itemTitle">{{ item.title }}</span>
+
+    <span>{{ item.description }}</span>
+    <br />
+    <span>{{ item.content }}</span>
+</div>
