--- a/app/views/main.html
+++ b/app/views/main.html
@@ -24,7 +24,7 @@
     </span>
 
     <div class="gridDisplay">
-        <span ng-repeat="item in infoList.items">
+        <span class="gridItemWrapper" ng-repeat="item in infoList.items">
             <grid></grid>
         </span>
     </div>
