--- a/app/views/collapsible.html
+++ b/app/views/collapsible.html
@@ -13,3 +13,32 @@
             <span class="compare" ng-click="addCompare(item)">Compare</span>
         </span>
 </div>
+
+<script>
+    /*
+        $('.collapsibleDisplay').fadeOut(100);
+        $('.shoppingCartDisplay').hide();
+        $('.compareDisplay').hide();
+        $('.sortItems').show();
+
+        function display(delay) {
+            if (!delay) {
+                delay = 150;
+            }
+            $timeout(function() {
+                $scope.currentCategory = category;
+                $scope.infoList.items = $scope.allItems[category].slice();
+                $timeout(function() {
+                    $('.collapsibleDisplay').fadeIn("fast");
+                //    $location.path($scope.currentCategory);
+                }, 100);
+            }, delay);
+        }
+
+        if ($scope.allItems[category]) {
+            display(150);
+        } else {
+            getCategoryItems(category, display, 150);
+        }
+        */
+</script>
