--- a/app/views/item.html
+++ b/app/views/item.html
@@ -1,6 +1,6 @@
 
 <div class="categories">
-        <span class="category" ng-click="main.setCategory(category)" ng-repeat="category in main.categories">
+        <span class="category" ng-click="setCategory(category)" ng-repeat="category in categories">
             {{ category | firstLetterCaps }}
         </span>
     </div>
