--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -152,8 +152,38 @@ $compare-color: rgb(77, 85, 91);
 
 /***** grid start *****/
 
+.categoryTitle
+{
+  position: absolute;
+  top: 150px;
+  left: 15%;
+  font-family: $font;
+  font-size: 35px;
+  text-decoration: underline overline;
+}
+
+.navContainer
+{
+  position: absolute;
+  top: 210px;
+  left: 15%;
+  width: 250px;
+  border: solid black 2px;
+  padding: 10px;
+  display: inline-block;
+  z-index: 99;
+
+  li
+  {
+    list-style-type: none;
+  }
+
+}
+
 .gridDisplay
 {
+  position: relative;
+  top: 25px;
   left: 5%;
   min-width: 80%;
   padding-left: 300px;
@@ -241,6 +271,61 @@ $compare-color: rgb(77, 85, 91);
   font-size: 20px;
 }
 
+.pageNavContainer
+{
+    position: relative;
+    top: -30px;
+    left: 5%;
+    width: 87%;
+    padding-left: 300px;
+    text-align: right;
+    display: inline-block;
+}
+
+
+.previousPage, .nextPage
+{
+  position: relative;
+  font-weight: bold;
+  color: rgba(26, 41, 58, 0.81);
+  cursor: pointer;
+}
+
+.previousPage
+{
+  padding-right: 5px;
+}
+
+
+.pageNumbers
+{
+  color: rgba(26, 41, 58, 0.81);
+  padding: 0 5px 0 5px;
+  cursor: pointer;
+}
+
+.currentPageNumber
+{
+  font-weight: bold;
+  text-decoration: underline;
+}
+
+.pageNumbers:hover
+{
+  color: rgba(26, 41, 58, 0.61);
+  text-decoration: underline;
+}
+
+.nextPage
+{
+  padding-left: 5px;
+}
+
+.previousPage:hover, .nextPage:hover
+{
+  color: rgba(26, 41, 58, 0.61);
+  text-decoration: underline;
+}
 /***** grid end *****/
 
 /***** collapsible start *****/
