--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -198,6 +198,30 @@ $compare-color: rgb(77, 85, 91);
   width: 225px;
 }
 
+.wishListIcon
+{
+  position: relative;
+  left: 165px;
+  top: 37px;
+  background-color: #a9bcbb;
+  border-radius: 5px;
+  box-shadow: 0 1px 2px 0;
+  padding: 4px 8px;
+  display: inline-block;
+}
+
+.wishListIconNotSelected
+{
+  visibility: hidden;
+}
+
+.wishListIconSelected
+{
+  background-color: #f1002a;
+  visibility: visible;
+}
+
+
 .gridItem
 {
   max-width: 20%;
