--- a/app/views/grid.html
+++ b/app/views/grid.html
@@ -1,5 +1,5 @@
 <span id="{{ $index }}" class="gridItem">
-    <span ng-class="inWishList(item.title) ? 'wishListIconSelected' : 'wishListIconNotSelected'" class="wishListIcon btn btn-default glyphicon glyphicon-heart"></span>
+    <span ng-class="inWishList(item.id) ? 'wishListIconSelected' : 'wishListIconNotSelected'" class="wishListIcon btn btn-default glyphicon glyphicon-heart"></span>
     <img class="gridImageSmall" ng-src="{{ item.imageThumb }}" />
      <span class="gridItemTitle">{{ item.title }}</span>
     <span class="gridItemPrice">{{ item.price | currency:$ }}</span>
