--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -196,6 +196,8 @@ $compare-color: rgb(77, 85, 91);
 {
   display: inline-block;
   width: 225px;
+  height: 280px;
+  margin: -39px 15px -50px 0;
 }
 
 .wishListIcon
@@ -320,42 +322,53 @@ $compare-color: rgb(77, 85, 91);
   font-weight: bold;
   color: rgba(26, 41, 58, 0.81);
   cursor: pointer;
+  border: solid;
+  padding: 5px 5px 6px;
 }
 
 .previousPage
 {
-  padding-right: 5px;
+  padding-right: 6px;
+  margin-right: -4px;
+  border-width: 1px 0 1px 1px;
 }
 
 
 .pageNumbers
 {
   color: rgba(26, 41, 58, 0.81);
-  padding: 0 5px 0 5px;
+  padding: 5px 8px 4px;
+  border: solid rgba(26, 41, 58, 0.9);
+  border-width: 1px 0 1px 1px;
   cursor: pointer;
 }
 
 .currentPageNumber
 {
-  font-weight: bold;
-  text-decoration: underline;
+  background-color: rgba(26, 41, 58, 0.9);
+  color: white;
+  border-color: rgba(26, 41, 58, 0.9);
 }
 
 .pageNumbers:hover
 {
-  color: rgba(26, 41, 58, 0.61);
-  text-decoration: underline;
+  color: white;
+  background-color: rgba(26, 41, 58, 0.7);
+  border-color: rgba(26, 41, 58, 0.9);
 }
 
 .nextPage
 {
   padding-left: 5px;
+  margin-left: -5px;
+  border-width: 1px;
 }
 
 .previousPage:hover, .nextPage:hover
 {
-  color: rgba(26, 41, 58, 0.61);
-  text-decoration: underline;
+  color: white;
+  background-color: rgba(26, 41, 58, 0.7);
+  border-color: rgba(26, 41, 58, 0.9);
 }
 /***** grid end *****/
 
