--- a/app/views/main.html
+++ b/app/views/main.html
@@ -55,9 +55,9 @@
     <div class="gridDisplay">
         <span class="pageNavContainer">
             <span ng-show="showPageNumbers">
-                <span class="previousPage" ng-click="pageNav('previous')">Previous</span>
+                <span class="previousPage glyphicon glyphicon-menu-left" ng-click="pageNav('previous')"></span>
                 <span class="pageNumbers" ng-class="{'currentPageNumber': pageNumber === $index}" ng-repeat="page in numberOfPagesDisplay() track by $index" ng-click="setPageNumber($index)">{{ $index + 1 }}</span>
-                <span class="nextPage" ng-click="pageNav('next')">Next</span>
+                <span class="nextPage glyphicon glyphicon-menu-right" ng-click="pageNav('next')"></span>
             </span>
         </span>
         <span class="gridItemWrapper" ng-repeat="item in infoList.items">
@@ -65,9 +65,9 @@
         </span>
     </div>
     <span ng-show="showPageNumbers" class="pageNavContainer">
-        <span class="previousPage" ng-click="pageNav('previous')">Previous</span>
+        <span class="previousPage glyphicon glyphicon-menu-left" ng-click="pageNav('previous')"></span>
         <span class="pageNumbers" ng-class="{'currentPageNumber': pageNumber === $index}" ng-repeat="page in numberOfPagesDisplay() track by $index" ng-click="setPageNumber($index)">{{ $index + 1 }}</span>
-        <span class="nextPage" ng-click="pageNav('next')">Next</span>
+        <span class="nextPage glyphicon glyphicon-menu-right" ng-click="pageNav('next')"></span>
     </span>
 
     <!--
