--- a/app/views/item.html
+++ b/app/views/item.html
@@ -10,8 +10,8 @@
     <div class="gridImageLargeContainer">
         <img class="gridImageLarge" src="{{ item.image }}">
     </div>
-
-    <span>{{ item.description }}</span>
+    <wish-list-button></wish-list-button>
+    <div>{{ item.description }}</div>
     <br />
     <span>{{ item.content }}</span>
 </div>
