--- a/app/views/wishListButton.html
+++ b/app/views/wishListButton.html
@@ -1,10 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
-
-</body>
-</html>
+<span ng-class="inWishListArray(item.id) ? 'itemInWishList' : 'itemNotInWishList'" class="itemViewWishListButton btn btn-default">{{ wishListButtonText }}</span>
