--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -6,18 +6,106 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/boots
 $expandedHeight: 600px;
 $collapsibleHeaderHeight: 75px;
 $font: "Times";
+$navBar-color: #e7e7e7;
 $font-color: rgba(50, 50, 50, 1);
 $compare-color: rgb(77, 85, 91);
 
 
+.navCategories
+{
+  position: relative;
+  background-color: $navBar-color;
+  top: 50px;
+  left: -91px;
+  border: solid 0 lightgrey;
+  border-width: 1px 0 1px 1px;
+  padding: 5px 0 0 5px;
+  display: inline-block;
+  visibility: hidden;
+  cursor: pointer;
+  z-index: 99;
+
+  li
+  {
+    list-style-type: none;
+    font-family: "Optima";
+    font-size: 15px;
+    padding: 9px 0 5px 5px;
+    margin-left: -42px;
+    height: 38px;
+    width: 122px;
+    border: solid;
+    border-width: 0 1px 1px 0;
+    border-color: lightgrey;
+    z-index: 99;
+  }
+
+  a
+  {
+    color: $font-color;
+    text-decoration: none;
+  }
+
+  span
+  {
+    padding-left: 5px;
+  }
+
+}
+
+.navSubCategories
+{
+  position: absolute;
+  top: -1px;
+  left: 125px;
+  min-width: 119px;
+  background-color: $navBar-color;
+  padding-left: 5px;
+  border: solid;
+  border-width: 0 0 1px 0;
+  border-color: lightgrey;
+
+  li
+  {
+    height: 40px;
+    padding: 9px 0 5px 5px;
+  }
+
+  li:hover
+  {
+    background-color: white;
+  }
+}
+
+.currentNavCategory
+{
+  background-color: white;
+  border: solid;
+  border-width: 0 0 1px 0;
+  border-color: lightgrey;
+}
+
+
+.secondaryNavbar
+{
+  margin-left: -126px;
+}
+
 .categories
 {
   height: 40px;
-  background-color: rgba(50, 50, 50, 1);
+  background-color: rgba(26, 41, 58, 1); /* rgba(50, 50, 50, 1); */
   padding: 9px 5px 0 5px;
-  border-radius: 2px;
+  border-radius: 2px 2px 0 0;
   color: rgba(255, 255, 255, 1);
 
+}
+
+.navContainerTitle
+{
+  font-family: $font;
+  font-size: 20px;
+  padding: 5px;
 }
 
 .category
@@ -26,14 +114,16 @@ $compare-color: rgb(77, 85, 91);
   padding: 5px 10px 5px 10px;
   font-family: $font;
   font-size: 15px;
+  color: $font-color;
   border-radius: 1px;
   cursor: pointer;
 }
 
-.category:hover
+.navContainerTitle:hover, .category:hover
 {
   background-color: rgba(60, 60, 60, 1);
   color: rgb(255, 255, 255);
+  border-radius: 2px;
 }
 
 .cartNav
@@ -171,10 +261,10 @@ $compare-color: rgb(77, 85, 91);
   top: 210px;
   left: 15%;
   width: 215px;
-  border: solid black 2px;
+  box-shadow: 1px 1px 1px 1px lightgrey;
   padding: 10px;
   display: inline-block;
-  z-index: 99;
+  z-index: 9;
 
   li
   {
@@ -240,7 +330,6 @@ $compare-color: rgb(77, 85, 91);
   img
   {
     background-color: rgba(26, 41, 58, 0.05);
-    border: 2px solid rgba(255, 255, 255, 0);
     border-radius: 2px;
     box-shadow: 1px 1px 1px lightgrey;
     padding-bottom: 45px;
@@ -324,8 +413,10 @@ $compare-color: rgb(77, 85, 91);
 .gridImageLarge
 {
   position: absolute;
-  top: 216px;
+  top: 210px;
   max-height: 400px;
+  border: solid 1px lightgrey;
+  border-radius: 3px;
 }
 
 .itemContainer
@@ -346,6 +437,31 @@ $compare-color: rgb(77, 85, 91);
   position: static;
   font-size: 30px;
 }
+
+.itemViewWishListButton
+{
+  min-width: 150px;
+  font-family: $font;
+  font-size: 14px;
+}
+
+.itemInWishList
+{
+  background-color: #b72b2b;
+  color: white;
+}
+
+.itemInWishList:hover
+{
+  background-color: #ff6d5e;
+  color: white;
+}
+
+.itemNotInWishList
+{
+  background-color: white;
+}
+
 
 .pageNavContainer
 {
