--- a/app/views/navMenu.html
+++ b/app/views/navMenu.html
@@ -1,5 +1,5 @@
 <ul class="nav navbar-nav">
-    <li class="active jewelryMenu">
+    <li class="jewelryMenu mainNavLink">
         <a hre="#/jewelry/0/earrings">
             Jewelry
             <span class="caret"></span>
