--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -60,6 +60,7 @@ $compare-color: rgb(77, 85, 91);
   top: -1px;
   left: 125px;
   min-width: 119px;
+  min-height: 160px;
   background-color: $navBar-color;
   padding-left: 5px;
   border: solid;
