--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -97,12 +97,15 @@ $compare-color: rgb(77, 85, 91);
 {
   background-color: #e7e7e7;
   color: $font-color;
+  border: 0px solid white;
+  border-width: 0 1px 0 1px;
   transition: .3s;
 }
 
 .mainNavLink:hover
 {
   background-color: $navLink-color-hover;
+  border-color: lightgrey;
   color: white;
 }
 
@@ -122,6 +125,7 @@ $compare-color: rgb(77, 85, 91);
   font-size: 20px;
   padding: 5px;
   text-decoration: underline;
+  cursor: pointer;
 }
 
 .category
